further edits and tightening

--- a/posts/2023-09-19.md
+++ b/posts/2023-09-19.md
@@ -19,7 +19,7 @@ While the reality is that no scalable data platform does anything nearly so simp
 Materialize is a responsible platform, and it opts you in to the strongest consistency guarantees we know of: [strict serializability](https://jepsen.io/consistency/models/strict-serializable).
 Although powerful, these database guarantees needs to be extended from command-response operation (pull) to streaming operation (push), as Materialize supports both concurrently.
 
-In this post we will unpack Materialize's consistency guarantees, show them happening in a [playground environment](https://materialize.com/register/), and help you probe and evaluate the consistency properties of the tools you are currently using for your operational work.
+In this post we will unpack Materialize's consistency guarantees, show them happening in a [playground environment](https://materialize.com/register/), and help you probe and evaluate the consistency properties of other tools you may be using for your operational work.
 
 
 ### Consistency a la Databases
@@ -61,19 +61,19 @@ Not only will Materialize behave as if all operations happen in *some* order, as
 
 ---
 
-Let's now dive in to each of the three concerns, which I'll call here input consistency, internal consistency, and output consistency.
+Properly prepared, let's now dive in to each of the three concerns above, which I'll call here input consistency, internal consistency, and output consistency.
 
 
 #### Input Consistency
 
 Materialize draws streamed input data from external sources, like Kafka and PostgreSQL.
 Ideally, Materialize would assign timestamps to updates that exactly track the moments of change in the upstream data.
-In practice, these sources are often insufficiently specific about their changes, and Materialize instead "reclocks" their sequence of states into its virtual time.
+In practice, these sources are often insufficiently specific about their changes, and Materialize instead "reclocks" their sequence of states into its own virtual time.
 When it does so, it assigns timestamps that aim to be consistent with the source itself.
 
-Materialize records its timestamp assignment in auxiliary sources, which are themselves continually evolving collections that record the progress through the source at each time.
+Materialize durably records its timestamp assignment in auxiliary sources, as changing collections that at each time record the progress through the source so far.
 
-PostgreSQL sources move forward using a "log sequence number", and you can see the current time and current log sequence number with the following query.
+PostgreSQL sources move forward using a "log sequence number", and you can see the current time and current log sequence number with the following query, where `pg_source_progress` just happened to be the name of the progress source.
 ```
 materialize=> select mz_now(), * from pg_source_progress;
         mz_now |         lsn
@@ -83,7 +83,8 @@ materialize=> select mz_now(), * from pg_source_progress;
 ```
 
 Kafka is more complicated. Each topic is comprised of an unbounded number of partitions, each of which moves forward through integer offsets. 
-Rather than a single `lsn`, each time has an association between partition ids and offsets, including a `0` for all of the partitions that have not yet come into existence.
+Rather than a single `lsn`, each time has an association between partition ids and offsets, including a `0` for all partitions that have not yet come into existence.
+The selection reports not a single number, but an offset for ranges of partitions.
 ```
 materialize=> select mz_now(), * from kafka_source_progress;
         mz_now | partition |   offset
@@ -97,7 +98,7 @@ materialize=> select mz_now(), * from kafka_source_progress;
 
 When Materialize reclocks these sources into its own timestamps, it aims to maintain consistency with the inputs.
 Specifically, it maintains the order of events in the underlying sources, it respects transaction boundaries when it is aware of them, and it could (but currently does not) transact against the upstream source to ensure that all writes are immediately visible.
-Let's dive in to each of these properties.
+Let's explore each of these properties.
 
 Most streamed sources have a notion of order, in some cases a total order like PostgreSQL's replication log, and in some cases a weaker order like Kafka's partitioned topics.
 Materialize's timestamp assignment should (and does) respect this order, so that you see a plausible database state.
@@ -128,9 +129,6 @@ Many streamed sources reveal transactional boundaries, such as PostgreSQL's repl
 Kafka itself supports "transactional writes" but does not reveal the transaction boundaries to readers; you would need to use Debezium configured with a transaction topic to provide transaction information with it.
 For PostgreSQL, Materialize assigns identical timestamps to all updates associated with the same transaction.
 This ensures that other operations either see all or none of the updates in any transaction.
-
-You would be able to observe this in a demo environement where you transact against your PostgreSQL database, and observe the progress source in Materialize, never observing transactional updates spanning timestamps.
-However, this demo does not translate well to the printed word.
 
 Finally, having written something to an upstream system (and received confirmation) you might like to be certain it is now available and reflected in Materialize.
 This can be achieved by transacting against the upstream system for each timestamp we produce, but is not currently done by Materialize.
@@ -188,24 +186,15 @@ Materialize will ensure that `credits`, `debits`, and `balance` always track exa
 To assess internal consistency for systems, Materialize and others, it can help to write views that track *invariants* of your data. 
 If there is something you know should always hold, for example that the net balances are zero, then you can observe the results and watch for a result that violates the invariant.
 
-As another example, using the views above, every `buyer` present in `winning_bids` will have an entry in `balance`.
-This should always be the case.
-We can write a view that checks for violations of this constraint, for which any entry would constitute a correctness violation.
-```sql
-SELECT * FROM winning_bids 
-WHERE buyer NOT IN (SELECT id FROM balance);
-```
-
 You can similarly be certain that when you see a result that it corresponds to the correct answer on a specific input. 
 For example, if you want to notify those users whose balance is below 100, the following view is certain to only report users for which it *actually happened*.
-```sql
-SELECT * FROM balance WHERE total < -100
-```
-Listed accounts and balances are exactly correct at the time the query was run; no one will receive a spurious and scary notification.
-If you would like to go a step further, you can even report the specific moment when each balance was so negative, by including the `mz_now()` timestamp function as part of the query.
+
 ```sql
 SELECT mz_now(), * FROM balance WHERE total < -100
 ```
+
+The `mz_now()` column will report the exact time at which the input data yielded a low balance.
+
 All results Materialize produces are the specific answers to the query on the input data as it existed at the query time.
 
 #### Output Consistency
@@ -228,13 +217,16 @@ Each timestamp is regularly indicated to be complete, even when no changes occur
 These properties remove ambiguity about what the changes were, when they happened, and whether there are any more coming for any given timestamp.
 
 Let's take a peek using the `SUBSCRIBE` command, simply watching the count of the number of auctions that have been won.
+
 ```
 materialize=> copy (
     subscribe (select count(*) from winning_bids) 
          with (progress = true)
 ) to stdout;
 ```
+
 I pressed `ENTER` between blocks of returned results to suggest at the live experience, and added comments to these lines that describe the *preceding* block of responses.
+
 ```
 1695653291958	t	\N	\N
 -- Timestamp of initial snapshot
@@ -255,24 +247,26 @@ I pressed `ENTER` between blocks of returned results to suggest at the live expe
 ...
 -- Nothing happens for a while.
 ```
+
 The columns of each returned row are: first the timestamp in milliseconds since 1970, second "is this a watermark", third the change in the cardinality of the record, and finally the payload columns of the record itself.
 Watermark records indicate only the forward progress of times, that all future timestamps will be at least so large, and have null values for columns other than the timestamp.
 
-The first and immediate block of output is the "initial snapshot timestamp" progress message, which tells us the time the initial snapshot of the `SUBSCRIBE` will reflect.
-The second block of output includes the snapshot, and as it requires spinning up a dataflow (`winning_bids` is a non-materialized view) also some additional changes that happen before we are able to report the snapshot.
-The next block is live and reports a new update as it happens, from `38550` to `38551`.
-The last block reports multiple seconds proceeding for which the count does not change.
+There are four blocks of output to unpack.
+1. The first and immediate block of output is the "initial snapshot timestamp" progress message, which tells us the time the initial snapshot of the `SUBSCRIBE` will reflect.
+2. The second block of output includes the snapshot first. As the snapshot requires spinning up a dataflow (`winning_bids` is a non-materialized view), some additional input changes happen before we have the snapshot, and we report their output changes as well.
+3. The next block is now live and reports a new update just as it happens, from `38550` to `38551`, and confirms that there are no further changes at that time.
+4. The last block reports multiple seconds proceeding for which the count does not change.
 
-Importantly, these blocks are each reports of the correct `COUNT(*)` output at each time, rather than "what happens to be available". 
+These blocks each report the correct `COUNT(*)` output at the exact times the inputs change. 
 Materialize will wait until it is certain of the exact updates for a time, including that they are durably committed, before reporting them.
 
 Although other destinations differ from `SUBSCRIBE`, each have access to an ongoing stream of precise information detailing exactly what changed, when it changed, and whether more changes are due.
-This information communicates to consumers the moment a change has certainly occured, giving them the confidence to act immediately.
+This information communicates to consumers the moment a change has certainly occurred, giving them the confidence to act immediately.
 
 ## Consistency and Operational Confidence
 
 Consistency is critical on operational workflows because there are actions that need to be taken.
-Many of these actions have consequences, and if they are directly driven by an inconsistent platform its up to you to diagnose and debug any resulting glitchy behavior.
+Many of these actions have consequences, and if they are directly driven by an inconsistent platform it is up to you to diagnose and debug any resulting glitchy behavior.
 These glitches have consequences too, some of which can be corrected after the fact and some of which cannot.
 Operational platforms provide value in part by introducing and maintaining consistency for you, avoiding unintended actions and their consequences.
 
@@ -281,5 +275,5 @@ This guarantee means Materialize behaves *as if* it applied all commands in an o
 In reality Materialize is massively concurrent, but it absorbs this complexity and presents as a surprisingly capable single operator.
 
 If this resonates with you, especially if you have heaps of JAR files and Kafka topics, we invite you to try out Materialize for yourself.
-Our [guided tutorial]() builds up the auction data sources described above, and includes demonstrations of consistency.
-If you'd like to try out Materialize on larger volumes of your own data, reach out about doing a [Proof of Concept]() with us!
+Our [guided tutorial](https://www.materialize.com/docs/get-started/quickstart/) builds up the auction data sources described above, and includes demonstrations of consistency.
+If you'd like to try out Materialize on larger volumes of your own data, reach out about doing a [Proof of Concept](https://materialize.com/trial/) with us!
