--- a/posts/2023-09-19.md
+++ b/posts/2023-09-19.md
@@ -48,7 +48,7 @@ Output data can be provided to external sinks like Kafka, as streams of events r
 We need to speak clearly about how Materialize's consistency guarantees integrate with these features.
 
 These three concerns lie at the heart of an operational data warehouse, whose outputs and actions must faithfully represent business logic applied to their inputs.
-Without this guarantee, it is not entirely clear what an operational platform will and will not do on your behalf..
+Without this guarantee, it is not entirely clear what an operational platform will and will not do on your behalf.
 
 ---
 
