--- a/posts/2023-10-10.md
+++ b/posts/2023-10-10.md
@@ -2,28 +2,33 @@
 
 Responsiveness is one of three components of [Materialize's Trust pillar of product value](https://materialize.com/blog/operational-attributes/#trust), the other two being [freshness](https://materialize.com/blog/freshness/) and [consistency](https://materialize.com/blog/operational-consistency/).
 While being fresh and consistent is fundamental, operational work suffers if each intervention is a 15 minute deployment away.
+We all want to live in world where our operational logic is fully baked, but the reality is that things change and interactivity matters.
+Moreover, operational work is often inherently interactive: responding to user or operator queries that are not known ahead of time.
+For these reasons, among others, systems must be responsive to be a trustworthy part of your operational layer.
 
 Different architectures have different visions for how work gets done, which leads to different responsiveness characteristics.
-The conventional cloud data warehouse pulls data from cloud storage and re-evaluates your query, quickly indeed but each time from scratch.
+The conventional cloud data warehouse pulls stale data from cloud storage and re-evaluates your query, each time from scratch and at some cost.
 Dataflow engines generally re-flow the streams that define their inputs, which happens at high throughput but still takes time to cover the volume of data.
 Caches and microservices generally nail responsiveness, though without much to say about consistency and freshness.
+The caveats make none of these alternatives especially satisfying.
 
 Responsiveness is about more than just promptly providing a response: the response needs to be valuable and actionable.
-Systems can trivially respond with inconsistent or stale results ("nothing yet, boss"), but we understand that this doesn't yet provide value.
+Systems can trivially respond with inconsistent or stale results ("nothing yet, boss"), but we understand that this isn't yet helpful.
+They can promptly respond to interventions with confirmation of initiation ("just starting, boss"), but this doesn't mean any work will soon be done.
 Responsiveness provides value when the response has meaning, which we believe is capture by consistency and freshness (which is why we covered them first!).
-A responsive system must promptly provide a *meaningful* response; otherwise it is just entertainment.
+A responsive system needs to promptly provide a *meaningful* response; otherwise it is just entertainment.
 
-In this post we'll dive into how Materialize makes commands responsive, from the data and query structure it exploits, through the technical implementation underpinnings, up to an example of responsive, fresh, and consistent results for non-trivial queries involving multi-way joins.
+In this post we'll dive into how Materialize makes commands responsive, from the structure it exploits in both data and queries, through the technical underpinnings, up to an example of responsive, fresh, and consistent results for non-trivial operational work involving multi-way joins.
 
 ## Responsiveness in Materialize
 
 In Materialize, responsiveness is about minimizing the time between an issued command and Materialize's consistent, fresh responses (to the operator, or to downstream consumers).
 
-Achieving responsiveness is about more than just programming hard to make computers go fast. 
+Achieving responsiveness is about much more than just programming hard to make computers go fast. 
 It is about preparing and organizing information ahead of time so that when commands arrive we have the answers (nearly) at hand.
-When `SELECT` commands arrive, from easy `LIMIT 1`s to hard multi-way `JOIN`s, we want to minimize the time before providing the result.
-When users create indexes, materialized views, and sinks, we want to minimize the time before results are available for consumption.
-In each case, we want to identify and exploit structure in the data and the commands to make subsequent work fast.
+When `SELECT` commands arrive, from easy `LIMIT 1`s to hard multi-way `JOIN`s, we want to minimize the time we need to take before we can provide the result.
+When users create indexes, materialized views, and sinks, we want to minimize the time before those components are operational.
+In each case, we want to identify and exploit structure in both the data and the commands to make subsequent work fast.
 
 ### Data Structure: Change Data Capture and Snapshot Roll-ups
 
@@ -41,32 +46,34 @@ Any tricks we can use for snapshots of data are in scope for Materialize, as lon
 ### Query Structure: Data Parallelism
 
 A great deal of the value in SQL's `SELECT` command is how it draws out of complex questions the *independence* of the rows of the data.
-A `WHERE` or `HAVING` clause applies row-by-row, where the result on one row does not affect the result on another row.
-A `JOIN` clause can find rows that match on key columns, whose results are independent of rows that do not match on these columns.
-A `GROUP BY` clause produces some aggregates for each key, where each output depends only on the rows with that key, and no others.
+A `WHERE` or `HAVING` clause applies row-by-row; the result on one row does not affect the result on another row.
+A `JOIN` clause finds rows that match on key columns, whose results are independent of rows that do not match on these columns.
+A `GROUP BY` clause produces aggregates for each key, each output independent of rows with other keys.
 It is this query structure, the identified *independence*, that enables much of modern data processing optimization.
 
-Materialize's storage plane records CDC streams and maintains them as snapshots and changelogs, serving them up to other parts of the system.
-When it does serve them up, it does so in response to requests, and these requests usually have valuable context that can improve its performance.
+Materialize's storage plane serves up CDC snapshots and changelogs, but in the context of commands that allow it to optimize the data accessed.
 If a user requires only recent data, e.g. a `WHERE row.time > mz_now()`, the storage layer can return only the subset of cloud objects that might pass this test.
 If a user requires only a subset of columns, e.g. a projection, the storage layer could (but does not yet) return only those columns
-If a user needs only limited results, e.g. a `LIMIT 1`, the storage layer can stop as soon as the need is met.
-Each of these are examples of techniques that apply to cloud data warehouses on static data, but generalize to changing data for these SQL idioms. 
+If a user needs only limited results, e.g. a `LIMIT 1`, the storage layer can stop as soon as the needed number is met.
+These are each techniques from cloud data warehouses on static data, but generalize to changing data for the same SQL idioms. 
 
 Materialize's compute plane builds and maintains indexes over both input data and data derived from SQL views.
 These indexes are on key columns, or key expressions, and ensure that one can look up all records that match a certain key.
 They allow queries with `WHERE key = literal` or `WHERE key IN (lit1, lit2, lit3)` to dive directly to the relevant results, rather than scan everything.
-They also enable `JOIN` clauses on the data that equate the key columns, rather than needing to rescan and reorganize the input.
-These indexes are also continually maintained, providing interactive access without sacrificing freshness or consistency as might an independent cache.
+They also enable `JOIN`s that equate the key columns to run immediately, rather than needing to rescan and reorganize the input.
+These indexes are continually maintained, and provide interactive access without sacrificing freshness or consistency as might an independent cache.
 
 Finally, Materialize's serving plane takes advantage of independence among the SQL commands themselves. 
-While Materialize must put the commands in *some* order, Materialize can see which commands can execute concurrently and does so.
-Materialize tracks the available timestamps for each input and derived view (their "freshness"), and uses this information in determining the best order.
+While Materialize must put the commands in *some* order, it can see which commands can execute concurrently and does so.
+Materialize tracks the available timestamps for each input and derived view (their "freshness"), and uses this information to avoid sequencing work that cannot yet complete ahead of work that can. 
 When consistency or freshness is not as important as responsiveness, Materialize provides tools (e.g. `SERIALIZABLE` isolation) to navigate the trade-offs.
+
+Materialize takes advantage of existing SQL idioms you already know and expect, to provide a responsive experience.
 
 ## A Worked Example: Auctions
 
-Let's take a quick look at a workload that highlights Materialize's responsiveness in the face of a non-trivial workload.
+Let's take a quick look at a workload that highlights Materialize's *responsiveness* in the face of a non-trivial workload.
+We'll mostly deal with interactive queries, but the implications apply just as well to deployed dataflows into indexes, materialized views, and sinks.
 
 Our [guided tutorial](https://materialize.com/docs/get-started/quickstart/) is based around an auction load generator, which contains among other things continually evolving auctions and bids.
 One common query you might want to support is "for each auction I (a user) have bid in, how many other users have outbid me?"
@@ -149,6 +156,11 @@ These mechanism take advantage of structure in the data and structure in the que
 Importantly, each of them provide identical output, as responsiveness does not come at the expense of consistency or freshness.
 
 ## Responsiveness and Operational Agility
+
+Operational tools that cannot respond quickly with actionable output are inherently clumsy and problematic.
+You, your team, or your users will work around them, giving up on hard-won consistency, freshness, or both.
+By the same token, being *meaningfully responsive* is about more than providing a prompt placeholder response.
+Operational systems need to be ready with the information you need, and be poised to implement the operational work you require.
 
 If responsiveness and operational agility sound exciting to you, we invite you to try out Materialize for yourself.
 Our [guided tutorial](https://www.materialize.com/docs/get-started/quickstart/) builds up the auction data sources described above, and includes demonstrations of consistency.
